--- a/game.html
+++ b/game.html
@@ -1,87 +1,88 @@
-<!-- Students: Our work lies in the slideshow.js file. -->
-
 <!DOCTYPE html>
 
 <html lang="en-us">
 
-  <head>
+<head>
 
-    <meta charset="UTF-8">
-<!--    <meta http-equiv="refresh" content="90;url=../TriviaGame/triviaend.html" />  -->
+  <meta charset="UTF-8">
+  <title>Slideshow</title>
+  <link rel="stylesheet" type="text/css" href="../TriviaGame/assets/css/style.css">
 
-    <title>Slideshow</title>
-    <link rel="stylesheet" type="text/css" href="../TriviaGame/assets/css/style.css">
+  <style>
+    body {
+      /* Visual */
+      background: lightgrey;
+    }
 
-    <style>
+    #image-holder {
 
-      body { /* Visual */ background: lightgrey;}
+      /* Positioning */
+      margin: 0 auto;
 
-      #image-holder {
+      /* Box-model */
+      width: 400px;
 
-        /* Positioning */
-         margin: 0 auto;
+      /* Typography */
+      text-align: center;
 
-        /* Box-model */
-        width: 400px;
+    }
 
-        /* Typography */
-        text-align: center;
+    #buttons {
 
-      }
+      /* Positioning */
+      margin: 50px 0;
 
-      #buttons {
+      /* Typography */
+      text-align: center;
 
-        /* Positioning */
-        margin: 50px 0;
+    }
 
-        /* Typography */
-        text-align: center;
+    button {
 
-      }
+      /* Box-model */
+      width: 200px;
+      height: 100px;
 
-      button {
+    }
+  </style>
 
-        /* Box-model */
-        width: 200px;
-        height: 100px;
+</head>
 
-      }
+<body>
+  <div id="title">
+    <h1>TOTALLY TRIVIAL TRIVIA!</h1>
+  </div>
+  <div id="countdownExample">
+    <div class="values"></div>
+  </div>
 
-    </style>
+  <p id="demo"></p>
 
-  </head>
-
-  <body>
-    <div id="title"><h1>TOTALLY TRIVIAL TRIVIA!</h1></div>
-    <div id="countdownExample">
-        <div class="values"></div>
-    </div>
-
-    <p id="demo"></p>
-
-    <p> Time Remaining:  <span id="countdowntimer">90 </span> Seconds</p>
-
-
-    <div class="quiz-container">
-      <div id="quiz"></div>  
-    </div>
-    <button id="submit">Submit Quiz</button>
-    <button id="resetgame"><a href="../TriviaGame/index.html">Reset Game</a></button>
-
-    <div id="results"></div>
-
-    <!-- jQuery -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-    <!-- Script -->
-    <script type="text/javascript" src="../TriviaGame/assets/javascript/app.js"></script>
-
-    <script type="text/javascript">
-
-    </script>
+  <p> Time Remaining:
+    <span id="countdowntimer">90 </span> Seconds</p>
 
 
-  </body>
+  <div class="quiz-container">
+    <div id="quiz"></div>
+  </div>
+  <button id="submit">Submit Quiz</button>
+  <button id="resetgame">
+    <a href="../TriviaGame/index.html">Reset Game</a>
+  </button>
+
+  <div id="results"></div>
+
+  <!-- jQuery -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+  <!-- Script -->
+  <script type="text/javascript" src="../TriviaGame/assets/javascript/app.js"></script>
+
+  <script type="text/javascript">
+
+  </script>
+
+
+</body>
 
 </html>
-
