--- a/index.html
+++ b/index.html
@@ -2,67 +2,74 @@
 
 <html lang="en-us">
 
-  <head>
+<head>
 
-    <meta charset="UTF-8">
-    <title>Trivia Game</title>
-    <link rel="stylesheet" type="text/css" href="../TriviaGame/assets/css/style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-    <style>
+  <meta charset="UTF-8">
+  <title>Trivia Game</title>
+  <link rel="stylesheet" type="text/css" href="../TriviaGame/assets/css/style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+    crossorigin="anonymous">
+  <style>
+    body {
+      /* Visual */
+      background: lightgrey;
+    }
 
-      body { /* Visual */ background: lightgrey;}
+    #image-holder {
 
-      #image-holder {
+      /* Positioning */
+      margin: 0 auto;
 
-        /* Positioning */
-         margin: 0 auto;
+      /* Box-model */
+      width: 400px;
 
-        /* Box-model */
-        width: 400px;
+      /* Typography */
+      text-align: center;
 
-        /* Typography */
-        text-align: center;
+    }
 
-      }
+    #buttons {
 
-      #buttons {
+      /* Positioning */
+      margin: 50px 0;
 
-        /* Positioning */
-        margin: 50px 0;
+      /* Typography */
+      text-align: center;
 
-        /* Typography */
-        text-align: center;
+    }
 
-      }
+    button {
 
-      button {
+      /* Box-model */
+      width: 200px;
+      height: 100px;
 
-        /* Box-model */
-        width: 200px;
-        height: 100px;
+    }
+  </style>
 
-      }
+</head>
 
-    </style>
+<body>
 
-  </head>
+  <div id="title">
+    <h1>TOTALLY TRIVIAL TRIVIA!</h1>
+  </div>
+  <div id="buttons">
+    <button id="start">
+      <h1>
+        <a href="game.html">START</a>
+      </h1>
+    </button>
+  </div>
+  <div class="container2"></div>
 
-  <body>
 
-    <div id="title"><h1>TOTALLY TRIVIAL TRIVIA!</h1></div>
-    <div id="buttons">
-      <button id="start"><h1><a href="game.html">START</a></h1></button>
-    </div>
-    <div class="container2"></div>
+  <!-- jQuery -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+  <!-- Script -->
+  <script type="text/javascript" src="../TriviaGame/assets/javascript/app.js"></script>
 
-    <!-- jQuery -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-    <!-- Script -->
-    <script type="text/javascript" src="../TriviaGame/assets/javascript/app.js"></script>
-
-  </body>
+</body>
 
 </html>
-
